# metis_fastapi

./: .gitignore  local_settings.json  pyproject.toml
metis_fastapi/: dependencies.py  main.py
migrations/: env.py
migrations/versions/: 20260705_000001_create_state_log_tables.py  20260705_000002_add_run_telemetry_columns.py
modules/: HulScaler.py  RedisProxy.py  ScalerFactory.py  device_rph032.py  local_settings.py  state_log_db.py  state_log_models.py  state_log_repository.py  telemetry_store.py
routers/: ControlNestDAQ.py  RouterRph032.py  RouterScaler.py  RouterSystemCommand.py  RouterTelemetry.py
